# x52pro-linux

./: INSTALL.md  Makefile.am  configure.ac
daemon/: Makefile.am  x52_daemon_clock.c  x52_daemon_commands.h  x52_daemon_common.h  x52_daemon_control.h  x52_daemon_core.c  x52_daemon_thread.c  x52_daemon_thread.h
driver/: Makefile.am  config.c  drv_config.h  logging.c  logging.h  main.c
lib/libusbx52/: Makefile.am
lib/libx52/: Makefile.am
lib/libx52util/: Makefile.am
po/: POTFILES.in  x52pro-linux.pot  xx_PL.po
tests/: Makefile.am
utils/cli/: Makefile.am
utils/test/: Makefile.am
